Unit_2-C_Programming/Unit_2_lesson6_structures_union_enum/.metadata/.plugins/org.eclipse.cdt.ui/global-build.log
18:08:48 **** Rebuild of configuration Debug for project 1 ****
Info: Internal Builder is used for build
gcc -O0 -g3 -Wall -c -fmessage-length=0 -o EX1.o "..\\EX1.c" 
..\EX1.c: In function 'main':
..\EX1.c:18:10: warning: format '%d' expects argument of type 'int *', but argument 2 has type 'int' [-Wformat=]
  scanf("%d",s1.roll);
          ^
..\EX1.c:22:10: warning: format '%f' expects argument of type 'float *', but argument 2 has type 'double' [-Wformat=]
  scanf("%f",s1.marks);
          ^
gcc -o 1.exe EX1.o 
18:09:11 **** Incremental Build of configuration Debug for project 1 ****
Info: Internal Builder is used for build
gcc -O0 -g3 -Wall -c -fmessage-length=0 -o EX1.o "..\\EX1.c" 
..\EX1.c: In function 'main':
..\EX1.c:14:10: warning: format '%s' expects argument of type 'char *', but argument 2 has type 'char (*)[50]' [-Wformat=]
  scanf("%s",&s1.name);
          ^
gcc -o 1.exe EX1.o 
Info: Nothing to build for 1
Info: Nothing to build for 1
18:10:53 **** Incremental Build of configuration Debug for project 1 ****
Info: Internal Builder is used for build
gcc -O0 -g3 -Wall -c -fmessage-length=0 -o EX1.o "..\\EX1.c" 
gcc -o 1.exe EX1.o 
Info: Nothing to build for 1
18:12:21 **** Incremental Build of configuration Debug for project 1 ****
Info: Internal Builder is used for build
gcc -O0 -g3 -Wall -c -fmessage-length=0 -o EX1.o "..\\EX1.c" 
gcc -o 1.exe EX1.o 
Info: Nothing to build for 1
Info: Nothing to build for 1
21:49:25 **** Rebuild of configuration Debug for project 2 ****
Info: Internal Builder is used for build
gcc -O0 -g3 -Wall -c -fmessage-length=0 -o EX2.o "..\\EX2.c" 
..\EX2.c: In function 'sum':
..\EX2.c:9:26: error: invalid initializer
   struct information sum=0;
                          ^
..\EX2.c:10:9: error: invalid operands to binary + (have 'struct information' and 'struct information')
   sum=s1+s2;
         ^
..\EX2.c: In function 'main':
..\EX2.c:40:10: warning: format '%d' expects argument of type 'int *', but argument 2 has type 'float *' [-Wformat=]
  scanf("%d",&s2.inch);
          ^
Info: Nothing to build for 1
21:49:35 **** Incremental Build of configuration Debug for project 2 ****
Info: Internal Builder is used for build
gcc -O0 -g3 -Wall -c -fmessage-length=0 -o EX2.o "..\\EX2.c" 
..\EX2.c: In function 'sum':
..\EX2.c:9:26: error: invalid initializer
   struct information sum=0;
                          ^
..\EX2.c:10:9: error: invalid operands to binary + (have 'struct information' and 'struct information')
   sum=s1+s2;
         ^
Info: Nothing to build for 1
21:49:51 **** Incremental Build of configuration Debug for project 2 ****
Info: Internal Builder is used for build
gcc -O0 -g3 -Wall -c -fmessage-length=0 -o EX2.o "..\\EX2.c" 
..\EX2.c: In function 'sum':
..\EX2.c:10:9: error: invalid operands to binary + (have 'struct information' and 'struct information')
   sum=s1+s2;
         ^
Info: Nothing to build for 1
21:53:29 **** Incremental Build of configuration Debug for project 2 ****
Info: Internal Builder is used for build
gcc -O0 -g3 -Wall -c -fmessage-length=0 -o EX2.o "..\\EX2.c" 
gcc -o 2.exe EX2.o 
Info: Nothing to build for 1
21:53:44 **** Incremental Build of configuration Debug for project 2 ****
Info: Internal Builder is used for build
gcc -O0 -g3 -Wall -c -fmessage-length=0 -o EX2.o "..\\EX2.c" 
gcc -o 2.exe EX2.o 
Info: Nothing to build for 2
Info: Nothing to build for 1
Info: Nothing to build for 2
22:03:58 **** Rebuild of configuration Debug for project 3 ****
Info: Internal Builder is used for build
gcc -O0 -g3 -Wall -c -fmessage-length=0 -o EX3.o "..\\EX3.c" 
..\EX3.c: In function 'main':
..\EX3.c:27:10: warning: format '%d' expects argument of type 'int *', but argument 2 has type 'float *' [-Wformat=]
  scanf("%d",&n1.real);
          ^
..\EX3.c:35:10: warning: format '%d' expects argument of type 'int *', but argument 2 has type 'float *' [-Wformat=]
  scanf("%d",&n2.real);
          ^
gcc -o 3.exe EX3.o 
Info: Nothing to build for 1
Info: Nothing to build for 2
22:04:09 **** Incremental Build of configuration Debug for project 3 ****
Info: Internal Builder is used for build
gcc -O0 -g3 -Wall -c -fmessage-length=0 -o EX3.o "..\\EX3.c" 
gcc -o 3.exe EX3.o 
Info: Nothing to build for 3
01:44:58 **** Incremental Build of configuration Debug for project 3 ****
Info: Internal Builder is used for build
gcc -O0 -g3 -Wall -c -fmessage-length=0 -o EX3.o "..\\EX3.c" 
gcc -o 3.exe EX3.o 
Info: Nothing to build for 1
Info: Nothing to build for 2
Info: Nothing to build for 3
02:17:27 **** Rebuild of configuration Debug for project 4 ****
Info: Internal Builder is used for build
gcc -O0 -g3 -Wall -c -fmessage-length=0 -o EX4.o "..\\EX4.c" 
..\EX4.c: In function 'main':
..\EX4.c:30:25: warning: format '%d' expects argument of type 'int', but argument 2 has type 'double' [-Wformat=]
         printf("Marks: %d\n", students[i].marks);
                         ^
gcc -o 4.exe EX4.o 
Info: Nothing to build for 1
Info: Nothing to build for 2
Info: Nothing to build for 3
02:17:36 **** Incremental Build of configuration Debug for project 4 ****
Info: Internal Builder is used for build
gcc -O0 -g3 -Wall -c -fmessage-length=0 -o EX4.o "..\\EX4.c" 
gcc -o 4.exe EX4.o 
Info: Nothing to build for 4
Info: Nothing to build for 1
Info: Nothing to build for 2
Info: Nothing to build for 3
Info: Nothing to build for 4
02:24:50 **** Rebuild of configuration Debug for project 5 ****
Info: Internal Builder is used for build
gcc -O0 -g3 -Wall -c -fmessage-length=0 -o EX5.o "..\\EX5.c" 
gcc -o 5.exe EX5.o 
Info: Nothing to build for 1
Info: Nothing to build for 2
Info: Nothing to build for 3
Info: Nothing to build for 4
02:25:02 **** Incremental Build of configuration Debug for project 5 ****
Info: Internal Builder is used for build
gcc -O0 -g3 -Wall -c -fmessage-length=0 -o EX5.o "..\\EX5.c" 
gcc -o 5.exe EX5.o 
Info: Nothing to build for 5
Info: Nothing to build for 1
Info: Nothing to build for 2
Info: Nothing to build for 3
Info: Nothing to build for 4
Info: Nothing to build for 5
02:29:04 **** Rebuild of configuration Debug for project 6 ****
Info: Internal Builder is used for build
gcc -O0 -g3 -Wall -c -fmessage-length=0 -o EX6.o "..\\EX6.c" 
gcc -o 6.exe EX6.o 
Info: Nothing to build for 6
